<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">TuNegocio</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_click">Title click</string>
    <string name="menu_inventario">Inventario</string>
    <string name="menu_ventas">Ventas</string>
    <string name="menu_clientes">Clientes</string>
    <string name="menu_informes">Informes</string>
    <string name="menu_proveedores">Proveedores</string>
    <string name="menu_empleados">Empleados</string>
    <string name="menu_info_negocio">Informacion Negocio</string>


    <string name="register">Registro</string>
    <string name="form_login">Iniciar Sesión</string>
    <string name="form_email">Correo</string>
    <string name="form_password"> Contraseña</string>
    <string name="form_bill">Crear Cuenta</string>
    <string name="form_supplier">Proveedor</string>
    <string name="form_name">Nombre</string>
    <string name="form_surnames">Apellidos</string>
    <string name="form_position">Puesto</string>
    <string name="form_telephone">Telefono</string>
    <string name="form_telephone1">Telefono 1</string>
    <string name="form_telephone2">Telefono 2</string>
    <string name="form_company">Empresa</string>
    <string name="form_salary">Salario</string>
    <string name="form_alias">Alias</string>
    <string name="form_product">Producto</string>
    <string name="form_addres">Dirección</string>
    <string name="form_descrip">Descripción</string>
    <string name="form_register">Registrarse</string>
    <string name="form_configPassword">Conseguir contraseña</string>
    <string name="form_add">Agregar</string>
    <string name="form_unit">Unidad</string>
    <string name="form_employee">Empleado</string>
    <string name="form_category">Categoria</string>
    <string name="form_customer">Cliente</string>
    <string name="Business_name">Nombre negocio</string>
    <string name="profile">Información de cuenta</string>
    <string name="form_save">Guardar</string>
    <string name="form_update">Actualizar</string>
    <string name="form_email2">Correo:</string>
    <string name="form_password2">Contraseña:</string>
    <string name="copyright">TuNegocio</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="deshabilitar">Deshabilitar</string>
    <string name="detalle_categoria">Detalle Categoria</string>
    <string name="editar">Editar</string>

</resources>
