<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryDark">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:background="@color/primaryDark"
            android:src="@drawable/ic_regresar"
            android:tint="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primaryDark"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:layout_marginEnd="35dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fotoItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:orientation="horizontal"
        android:weightSum="4">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:src="@drawable/ic_menu_cliente" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/ic_camara"
            android:text="@string/form_add" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="353dp"
        android:padding="10dp">

        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/form_name"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/etApellidos"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/tvApellidos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvNombre"
            android:layout_marginTop="20dp"
            android:text="@string/form_surnames"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

        <EditText
            android:id="@+id/etApellidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvNombre"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/tvApellidos" />

        <TextView
            android:id="@+id/tvCorreo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvApellidos"
            android:layout_marginTop="20dp"
            android:text="@string/form_email"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

        <EditText
            android:id="@+id/etCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etApellidos"
            android:layout_alignStart="@+id/etApellidos"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/tvCorreo" />

        <TextView
            android:id="@+id/tvContra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvCorreo"
            android:layout_marginTop="20dp"
            android:text="@string/form_password"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvCorreo"
            android:layout_alignStart="@+id/etApellidos"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/tvContra" />

        <Button
            android:id="@+id/buttonregistro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="60dp"
            android:text="@string/form_register" />

    </RelativeLayout>

</LinearLayout>