<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".FragmentAdministrator.ProfileAdministrator">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/profile"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />


        <LinearLayout
            android:id="@+id/fotoItems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_below="@+id/top">

            <ImageView
                android:id="@+id/imageusuario"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:src="@drawable/usuario" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_below="@+id/fotoItems">

            <Button
                android:id="@+id/buttonAgregar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:drawableLeft="@drawable/ic_camara"
                android:text="@string/form_add" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/cuerpo"
            android:layout_width="match_parent"
            android:layout_height="353dp"
            android:padding="10dp"
            android:layout_below="@+id/linear">

            <TextView
                android:id="@+id/tvNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"

                android:text="@string/form_name"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

            <EditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_alignStart="@+id/etApellidos"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/tvApellidos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvNombre"
                android:layout_marginTop="20dp"
                android:text="@string/form_surnames"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

            <EditText
                android:id="@+id/etApellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvNombre"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/tvApellidos" />

            <TextView
                android:id="@+id/tvNombreNegocio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvApellidos"
                android:layout_marginTop="20dp"
                android:text="@string/Business_name"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

            <EditText
                android:id="@+id/etNombreNegocio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvApellidos"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/tvNombreNegocio" />

            <TextView
                android:id="@+id/tvCorreo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvNombreNegocio"
                android:layout_marginTop="20dp"
                android:text="@string/form_email"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

            <EditText
                android:id="@+id/etCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etNombreNegocio"
                android:layout_alignStart="@+id/etApellidos"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/tvCorreo" />

            <TextView
                android:id="@+id/tvContra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvCorreo"
                android:layout_marginTop="20dp"
                android:text="@string/form_password"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

            <EditText
                android:id="@+id/etContra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvCorreo"
                android:layout_alignStart="@+id/etApellidos"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/tvContra" />

            <Button
                android:id="@+id/buttonGuadar"
                android:layout_width="213dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="5dp"
                android:text="@string/form_save" />

        </RelativeLayout>
    </RelativeLayout>
</ScrollView>