<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:elevation="0dp"
    android:focusable="true"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="0dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="1dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imagenRecyclerC"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/ic_menu_cliente" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvNombreC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/form_name"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvAliasC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvNombreC"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/form_alias"
                android:textColor="#000"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/tvTelefonoUnoC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@+id/tvNombreC"
                android:text="@string/form_telephone1"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/tvTelefonoDosC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvTelefonoUnoC"
                android:layout_alignStart="@id/tvTelefonoUnoC"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@+id/tvAliasC"
                android:text="@string/form_telephone2"
                android:textSize="20sp" />

        </RelativeLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.cardview.widget.CardView>