<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    tools:context=".detalles.DetalleCategoria">

    <LinearLayout
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryDark">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:background="@color/primaryDark"
            android:src="@drawable/ic_regresar" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="35dp"
            android:background="@color/primaryDark"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/detalle_categoria"
            android:textColor="@android:color/white"
            android:textSize="25sp" />

    </LinearLayout>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bar"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="25dp">

        <TextView
            android:id="@+id/detalleCat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/form_category"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etCatEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <Button
            android:id="@+id/desCat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/deshabilitar"
            android:textColor="@color/white" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</RelativeLayout>